add bait and switch detection

--- a/popup.html
+++ b/popup.html
@@ -29,11 +29,11 @@
 
     <div class="overview">
       <h2>Detected Dark Patterns:</h2>
-      <ul>
-        <li> 
+      <ul id="overview-list">
+        <!-- <li> 
           <p class="type">Pre-selected Checkbox: </p>
           <p id="pre-selected-checkbox" class="number">Loading</p>
-        </li>
+        </li> -->
       </ul>
     </div>
     <script src="popup.js"></script>
